Updates to ITHIM manuscript #1
I included the figure of mean travel time by mode, region and age-sex stratum.  I also added citations for the data and worked on the Regional Analysis section

--- a/manuscript/ITHIM.bib
+++ b/manuscript/ITHIM.bib
@@ -94,3 +94,22 @@ pages = {703-709}
   journal={UW-Madison Technical Report},
   year={2016}
 }
+
+@misc{NHTS,
+  title = {National Household Transportation Survey},
+  howpublished = {\url{http://nhts.ornl.gov}},
+  note = {U.S. Department of Transportation, Federal Highway Administration, 2009}
+}
+
+@misc{ATUS,
+  title = {American Time Use Survey},
+  howpublished = {\url{http://www.bls.gov/tus/}},
+  note = {U.S. Bureau of Labor Statistics, 2011}
+}
+
+@misc{CDCWonder,
+  title = {Underlying Cause of Death 1999-2014 on CDC WONDER Online Database, released 2015},
+  howpublished = {\url{http://wonder.cdc.gov/ucd-icd10.html}},
+  note = {Centers for Disease Control and Prevention, National Center
+                  for Health Statistics. Accessed on Jul 19, 2016}
+}
