Included @vargovargo edits in Abstract Summary

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -39,12 +39,12 @@ University of Wisconsin{\textendash}Madison, Madison, WI USA\\
 
 \section{Summary:}
 \col[blue]{While increased active transportation, primarily cycling
-  and walk, is often held up as a goal for improved public health —
+  and walking, is often held up as a goal for improved public health —
   via reduced chronic disease, improved air quality, and reductions in
   greenhouse gas emissions --- obtaining estimates for the quantiative
-  impacts of such shifts remains infrequent, in not altogether
-  absent. Using U.S. metropolitan counties from the 10 regions defined
-  by the Department of Health and Human Services (HHS1-10) we perform
+  impacts of such shifts remains infrequent, if not altogether
+  absent from related policy action. Using U.S. metropolitan counties from the 10 regions defined
+  by the U.S. Department of Health and Human Services (HHS1-10) we perform
   a comparative risk analysis between each regions and national
   averages as the baseline.  We investigated the reduced chronic
   disease burden of ($x$, $y$, $z$ outcomes) from increased physical
