--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -184,8 +184,13 @@ value for \pEm{2.5} and a linear relationship bewteen change in
 \section{U.S. Metro-Regional Analysis}
 
 \begin{figure}[t]
-    \centerline{\includegraphics[width=0.4\textwidth]{./figures/fig3}}
-    \caption{Foo}\label{meanMatrices}
+  \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig3}}
+    \caption{Mean travel time by mode (walking/cycling) for each of
+      the four regions with a decrease in DALYs
+      $(\textrm{HHS01},\textrm{HHS02},\textrm{HHS09},\textrm{HHS10})$. The
+      national means are displayed on the far right.  These four
+      regions correspond to New England/NewYork and the West
+      Coast.}\label{meanMatrices}
 \end{figure}
 
 \col[blue]{\begin{itemize}
@@ -211,8 +216,8 @@ undue influence by outliers.\ei
 
 
 \begin{figure}[t]
-    \centerline{\includegraphics[width=0.4\textwidth]{./figures/HHSmap}}
-    \centerline{\includegraphics[width=0.4\textwidth]{./figures/fig2}}
+    \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig1}}
+    \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig2}}
     \caption{Change in total national DALYs for each regional
       transportation estimates.}\label{dalyFigure}
 \end{figure}
