Switched to pdf format for figures

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -184,7 +184,7 @@ value for \pEm{2.5} and a linear relationship bewteen change in
 \section{U.S. Metro-Regional Analysis}
 
 \begin{figure}[t]
-  \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig3}}
+  \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig3.pdf}}
     \caption{Mean travel time by mode (walking/cycling) for each of
       the four regions with a decrease in DALYs
       $(\textrm{HHS01},\textrm{HHS02},\textrm{HHS09},\textrm{HHS10})$. The
