--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -181,16 +181,17 @@ value for \pEm{2.5} and a linear relationship bewteen change in
 
 \end{methods}
 
+\begin{figure}[t]
+    \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig1}}
+    \caption{Map of HHS Regions and metropolitan areas}\label{HHSmap}
+\end{figure}
+
 \section{U.S. Metro-Regional Analysis}
 
 \begin{figure}[t]
-  \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig3.pdf}}
-    \caption{Mean travel time by mode (walking/cycling) for each of
-      the four regions with a decrease in DALYs
-      $(\textrm{HHS01},\textrm{HHS02},\textrm{HHS09},\textrm{HHS10})$. The
-      national means are displayed on the far right.  These four
-      regions correspond to New England/NewYork and the West
-      Coast.}\label{meanMatrices}
+    \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig2}}
+    \caption{Change in total national DALYs for each regional
+      transportation estimates.}\label{dalyFigure}
 \end{figure}
 
 \col[blue]{\begin{itemize}
@@ -214,12 +215,14 @@ undue influence by outliers.\ei
 \item Values for DALYs were found using the CDC Wonder database \cite{CDCWonder}
 \end{itemize}}
 
-
 \begin{figure}[t]
-    \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig1}}
-    \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig2}}
-    \caption{Change in total national DALYs for each regional
-      transportation estimates.}\label{dalyFigure}
+  \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig3.pdf}}
+    \caption{Mean travel time by mode (walking/cycling) for each of
+      the four regions with a decrease in DALYs
+      $(\textrm{HHS01},\textrm{HHS02},\textrm{HHS09},\textrm{HHS10})$. The
+      national means are displayed on the far right.  These four
+      regions correspond to New England/NewYork and the West
+      Coast.}\label{meanMatrices}
 \end{figure}
 
 \section*{Acknowledgment}
@@ -230,4 +233,3 @@ undue influence by outliers.\ei
 %\bibliographystyle{mypapers}
 \bibliography{ITHIM}
 \end{document}
-
